# omnitype

./: .gitignore  .releaserc.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PR_CONTENT.md  README.md  SECURITY.md  clippy.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  drafter.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md  question.md
.github/scripts/: generate.sh  generatecodediffs.sh
.github/workflows/: ci.yml  codeql.yml  notes.yml  release.yml  release_notes.yml
scripts/: README.md  bump.sh  commit-msg  rewrite_msg.sh  test.sh
src/: error.rs  lib.rs  main.rs
src/analyzer/: mod.rs
src/constraint_solver/: mod.rs
src/fixer/: mod.rs
src/parser/: mod.rs
src/runtime_tracer/: mod.rs
src/solver/: mod.rs
src/tracer/: mod.rs
src/types/: mod.rs
src/ui/: mod.rs
src/utils/: mod.rs
tests/: classes.py  complex.py  e2e.rs  sample.py
